--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
       as="fetch"
       crossorigin="anonymous"
     />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
 
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
+    /></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hizkia JB - Fullstack Developer Portfolio</title>
   </head>
